@@ -12,6 +12,7 @@
 * JetPay: Pass down authorization payment method token to refund a capture [davidsantoso]
 * GlobalCollect: Make message and error reporting more robust [curiousepic] #2370
 * Cybersource: Rescue XML parse exception [shasum] #2380
+* Payeezy: Support dynamic soft descriptors [shasum] #2384
 
 == Version 1.64.0 (March 6, 2017)
 * Authorize.net: Allow settings to be passed for CIM purchases [fwilkins] #2300
